--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
+  <modules>
+    <module>spring-intro</module>
+  </modules>
+
   <name>spring</name>
   <url>http://maven.apache.org</url>
 
