more for annotation autowired

--- a/spring-intro/pom.xml
+++ b/spring-intro/pom.xml
@@ -13,6 +13,11 @@
             <artifactId>lombok</artifactId>
             <version>1.16.10</version>
         </dependency>
+        <dependency>
+            <groupId>com.hulu.user-device</groupId>
+            <artifactId>user-device</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <parent>
