--- a/spring-intro/pom.xml
+++ b/spring-intro/pom.xml
@@ -14,9 +14,9 @@
             <version>1.16.10</version>
         </dependency>
         <dependency>
-            <groupId>com.hulu.user-device</groupId>
-            <artifactId>user-device</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.8.9</version>
         </dependency>
     </dependencies>
 
