--- a/spring-intro/pom.xml
+++ b/spring-intro/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.8.9</version>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.hk2.external</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>2.4.0-b34</version>
+        </dependency>
     </dependencies>
 
     <parent>
