--- a/spring-basic/pom.xml
+++ b/spring-basic/pom.xml
@@ -26,7 +26,7 @@
     </dependencies>
 
     <parent>
-    <groupId>com.xiaoming.spring</groupId>
+    <groupId>pers.xiaoming.spring</groupId>
     <artifactId>spring</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
