--- a/hibernate/pom.xml
+++ b/hibernate/pom.xml
@@ -14,6 +14,7 @@
 
   <properties>
     <hibernate.version>5.1.0.Final</hibernate.version>
+    <mysql.version>5.1.38</mysql.version>
   </properties>
 
   <dependencies>
@@ -27,6 +28,11 @@
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-c3p0</artifactId>
       <version>${hibernate.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>${mysql.version}</version>
     </dependency>
   </dependencies>
 
