--- a/hibernate/pom.xml
+++ b/hibernate/pom.xml
@@ -15,6 +15,7 @@
   <properties>
     <hibernate.version>5.1.0.Final</hibernate.version>
     <mysql.version>5.1.38</mysql.version>
+    <testng.version>6.8</testng.version>
   </properties>
 
   <dependencies>
@@ -34,9 +35,48 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>${mysql.version}</version>
     </dependency>
+
+    <!--Test Dependencies-->
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>${testng.version}</version>
+    </dependency>
+
   </dependencies>
 
-  <url>http://maven.apache.org</url>
-
+  <build>
+    <plugins>
+      <!-- Following plugin executes the testng tests -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.21.0</version>
+        <configuration>
+          <!-- Suite testng xml file to consider for test execution -->
+          <suiteXmlFiles>
+            <suiteXmlFile>src/test/resources/integration_testing.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+      <!-- Compiler plugin configures the java version to be usedfor compiling
+          the code -->
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
