--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>pers.xiaoming.java_frameworks</groupId>
-  <artifactId>java_frameworks</artifactId>
+  <artifactId>java_spring</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
@@ -11,7 +11,7 @@
     <module>spring-basic</module>
   </modules>
 
-  <name>spring</name>
+  <name>java_spring</name>
   <url>http://maven.apache.org</url>
 
   <properties>
