--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>pers.xiaoming.java_frameworks</groupId>
+  <groupId>pers.xiaoming.java_spring</groupId>
   <artifactId>java_spring</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
