--- a/spring-basic/pom.xml
+++ b/spring-basic/pom.xml
@@ -5,8 +5,8 @@
     <artifactId>spring-basic</artifactId>
 
     <parent>
-        <groupId>pers.xiaoming.java_frameworks</groupId>
-        <artifactId>java_frameworks</artifactId>
+        <groupId>pers.xiaoming.java_spring</groupId>
+        <artifactId>java_spring</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
