--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,8 @@
   <packaging>pom</packaging>
 
   <modules>
-    <module>spring-ioc</module>
+    <module>ioc</module>
+    <module>aop</module>
   </modules>
 
   <name>java_spring</name>
