--- a/aop/aop-xml/pom.xml
+++ b/aop/aop-xml/pom.xml
@@ -4,19 +4,11 @@
 
     <parent>
         <groupId>pers.xiaoming.java_spring</groupId>
-        <artifactId>java_spring</artifactId>
+        <artifactId>aop</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>aop</artifactId>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>aop-intro</module>
-        <module>aop-xml</module>
-        <module>aop-annotation</module>
-    </modules>
-
+    <artifactId>aop-xml</artifactId>
 
     <properties>
         <spring.version>4.2.5.RELEASE</spring.version>
