--- a/aop/aspectj/pom.xml
+++ b/aop/aspectj/pom.xml
@@ -4,18 +4,16 @@
 
     <parent>
         <groupId>pers.xiaoming.java_spring</groupId>
-        <artifactId>java_spring</artifactId>
+        <artifactId>aop</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>aop</artifactId>
+    <artifactId>aspectj</artifactId>
     <packaging>pom</packaging>
 
     <modules>
-        <module>aop-intro</module>
-        <module>aop-xml</module>
-        <module>aop-annotation</module>
-        <module>aspectj</module>
+        <module>aspectj-xml</module>
+        <module>aspectj-annotation</module>
     </modules>
 
 
