--- a/aop/background-proxy/pom.xml
+++ b/aop/background-proxy/pom.xml
@@ -8,5 +8,5 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>aop-intro</artifactId>
+    <artifactId>background-proxy</artifactId>
 </project>
