--- a/aop/aop-xml/pom.xml
+++ b/aop/aop-xml/pom.xml
@@ -9,4 +9,17 @@
     </parent>
 
     <artifactId>aop-xml</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+    </dependencies>
 </project>
