Fix mvn dependencies in aop module

--- a/aop/background-proxy/pom.xml
+++ b/aop/background-proxy/pom.xml
@@ -20,5 +20,10 @@
             <artifactId>cglib</artifactId>
             <version>${cglib.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 </project>
