--- a/aop/aspectj/aspectj-annotation/pom.xml
+++ b/aop/aspectj/aspectj-annotation/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>javax.inject</artifactId>
             <version>2.4.0-b34</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 
   <url>http://maven.apache.org</url>
