--- a/my-spring/pom.xml
+++ b/my-spring/pom.xml
@@ -9,4 +9,11 @@
     </parent>
 
     <artifactId>my-spring</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 </project>
